--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Book Listing App</string>
     <string name="search">Search</string>
     <string name="enter_keyword">Enter keyword</string>
+    <string name="sample_title">Trippings in Author-land</string>
+    <string name="author_name_sample">Emily Chubbuck Judson</string>
+    <string name="author">Author: </string>
+    <string name="preview">Preview on Google Books</string>
+    <string name="download_available">PDF Download available: </string>
+    <string name="click_to_download">Click here to download</string>
 </resources>
