--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="download_available">PDF Download available: </string>
     <string name="click_to_download">Click here to download pdf.</string>
     <string name="click_to_read">Click here for web reader.</string>
+    <string name="no_internet">No internet connection.</string>
 </resources>
